--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,17 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "firebase": "^12.2.1",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.454.0",
     "next": "^15.5.2",
     "next-themes": "^0.4.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.6.0",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
     "yup": "^1.4.0"
